# strongint

./: CMakeLists.txt  README.md
include/: strongint.h  strongint_io.h  strongint_literals.h  strongint_stdint.h  strongint_type.h
test/: strongint_test.cc
